--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
   <!-- Leaflet CSS si deseas incluir mapa más adelante -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
 
+  <!-- ✅ SDK de Telegram WebApp (necesario para obtener el ID del usuario) -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
   <!-- Script JS diferido -->
   <script src="{{ url_for('static', filename='script.js') }}" defer></script>
 </head>
